[package]
name = "vision-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
vision-derive-internal = { path = "../vision-derive-internal" }
beacon_dao_allocator = { package = "beacon_dao-allocator", git = "ssh://git@github.com/Vision-DAO/beacon-dao.git", features = [] }
vision-utils = { path = "../" }
wasmer = { version = "3.0.0-rc.1", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
serde_json = "1.0.87"
serde = "1.0.147"
