[package]
name = "vision-derive"
version = "0.1.0"
edition = "2021"

[features]
default = ["dep:beacon_dao_allocator"]
no_alloc = []

[dependencies]
vision-derive-internal = { path = "../vision-derive-internal" }
beacon_dao_allocator = { package = "beacon_dao-allocator", git = "https://github.com/Vision-DAO/beacon-dao", features = [], optional = true }
vision-utils = { path = "../" }
serde_json = "1.0.87"
serde = "1.0.147"
