[package]
name = "vision-derive-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vision-derive = { path = "../" }
vision-utils = { path = "../../" }
wasm-bindgen = "0.2"
serde = "1.0.145"
serde_json = "1.0.86"
wasmer = { version = "2.3.0", features = ["js", "std", "wasm-types-polyfill"], default-features = false }